deploy/production/broadcaster.yml
apiVersion: v1
kind: Service
metadata:
  name: pod-broadcaster
  namespace: justice-gov-uk-production
  labels:
    app: pod-broadcaster
spec:
  ports:
  - port: 1993
    name: http
  selector:
    app: pod-broadcaster
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-broadcaster
  namespace: justice-gov-uk-production
  labels:
    app: pod-broadcaster
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  selector:
    matchLabels:
      app: pod-broadcaster
  template:
    metadata:
      labels:
        app: pod-broadcaster
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: pod-broadcaster-serviceaccount
      containers:
        - name: pod-broadcaster
          image: ghcr.io/ministryofjustice/kubernetes-pod-broadcaster:latest
          resources:
            limits:
              cpu: 200m
              memory: 64Mi
            requests:
              cpu: 50m
              memory: 32Mi
          securityContext:
            runAsUser: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          # Run the 'cluster' task, it passes the cluster cert to deno.
          command: ["/bin/sh", "-c"]
          args: ["deno task cluster"]
