deploy/production/modsec-errors.tpl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-errors
  namespace: justice-gov-uk-production
  labels:
    app.kubernetes.io/name: nginx-errors
    app.kubernetes.io/part-of: ingress-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx-errors
      app.kubernetes.io/part-of: ingress-nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx-errors
        app.kubernetes.io/part-of: ingress-nginx
    spec:
      containers:
      - name: nginx-error-server
        image: registry.k8s.io/ingress-nginx/nginx-errors:v20230505@sha256:3600dcd1bbd0d05959bb01af4b272714e94d22d24a64e91838e7183c80e53f7f
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: custom-error-pages
          mountPath: /www
        securityContext:
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop: [ "ALL" ]
          runAsUser: 999
        resources:
          limits:
            cpu: 500m
            memory: 100Mi
          requests:
            cpu: 50m
            memory: 100Mi

      # Mount custom error page from configMap
      volumes:
      - name: custom-error-pages
        configMap:
          name: custom-error-pages
          items:
          - key: "403"
            path: "403.html"
          - key: "404"
            path: "404.html"
          - key: "429"
            path: "429.html"
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-errors
  namespace: justice-gov-uk-production
  labels:
    app.kubernetes.io/name: nginx-errors
    app.kubernetes.io/part-of: ingress-nginx
spec:
  selector:
    app.kubernetes.io/name: nginx-errors
    app.kubernetes.io/part-of: ingress-nginx
  ports:
  - port: 80
    targetPort: 8080
    name: http
