deploy/production/ingress.tpl.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: justice-gov-uk-production-ingress-modsec
  namespace: justice-gov-uk-production
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: justice-gov-uk-production-ingress-modsec-justice-gov-uk-production-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
    nginx.ingress.kubernetes.io/default-backend: nginx-errors
    nginx.ingress.kubernetes.io/custom-http-errors: "403,404,429"
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      ${MODSEC_CONFIG}
    nginx.ingress.kubernetes.io/proxy-body-size: "200m"
    # Squiz uses ThousandEyes for monitoring. Since migrating we no long need this so can block the requests here.
    nginx.ingress.kubernetes.io/server-snippet: |
      location = /health {
        auth_basic off;
        access_log off;
        default_type text/plain;
        add_header Content-Type text/plain;
        return 200 "OK";
      }
      location = /.well-known/security.txt {
        auth_basic off;
        return 301 https://raw.githubusercontent.com/ministryofjustice/security-guidance/main/contact/vulnerability-disclosure-security.txt;
      }
      if ($http_x_thousandeyes_agent) {
        return 403;
      }
    # Rate limiting configuration
    nginx.ingress.kubernetes.io/limit-rpm: "2000"
    nginx.ingress.kubernetes.io/limit-rps: "100"
    nginx.ingress.kubernetes.io/configuration-snippet: limit_req_status 429;
    # Indicates that you intentionally want to allow duplicate hostnames.
    allow-duplicate-host: "true"
    # A comma-separated list of namespaces where duplicate hostnames are permitted.
    # IMPORTANT: The value must be identical and in the same order on both Ingress objects.
    allowed-duplicate-ns: "justice-gov-uk-production,hale-platform-prod"
spec:
  ingressClassName: modsec
  tls:
  - hosts:
    - www.justice.gov.uk
    secretName: justice-gov-uk-production-cert-secret
  rules:
  - host: www.justice.gov.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 8080
